salesforce_sfdx/main/default/objects/POET__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Used for MF and Res-RTL only (LMI or Non-LMI)</description>
    <label>Customer Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>