salesforce_sfdx/main/default/objects/POET__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>ORACLE</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>