salesforce_sfdx/main/default/objects/POET__c/fields/Expenditure_Org__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Org__c</fullName>
    <description>ORACLE</description>
    <label>Expenditure Org</label>
    <length>240</length>
    <type>Text</type>
</CustomField>