salesforce_sfdx/main/default/objects/POET__c/fields/Expenditure_Type__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Type__c</fullName>
    <description>ORACLE</description>
    <label>Expenditure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER REBATES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>