salesforce_sfdx/main/default/objects/POET__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>ORACLE</description>
    <label>Program Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>