salesforce_sfdx/main/default/objects/POET__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <formula>CASE ( TEXT(Task__c ),
"0005","Customer Rebates",
"0001","Customer Rebates - BYOT",
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Description</label>
    <type>Text</type>
</CustomField>